--- a/index.html
+++ b/index.html
@@ -1,22 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Netlify Auto Deploy Demo</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; background: #f2f2f2; display:flex; align-items:center; justify-content:center; height:100vh; margin:0; }
-    .card { background:#fff; padding:28px; border-radius:10px; box-shadow:0 6px 20px rgba(0,0,0,0.08); text-align:center; width:320px; }
-    h1 { margin:0 0 8px; font-size:20px; color:#111; }
-    p { margin:0; color:#555; }
-    .badge { margin-top:14px; display:inline-block; font-size:12px; padding:6px 10px; border-radius:6px; background:#e8f7ff; color:#0077cc; }
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+    }
+    .container {
+      background: rgba(255,255,255,0.1);
+      padding: 40px 60px;
+      border-radius: 20px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.2);
+      backdrop-filter: blur(10px);
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 20px;
+    }
+    a.button {
+      display: inline-block;
+      padding: 12px 30px;
+      font-size: 1rem;
+      font-weight: 700;
+      color: #2575fc;
+      background: #fff;
+      border-radius: 50px;
+      text-decoration: none;
+      transition: all 0.3s ease;
+    }
+    a.button:hover {
+      background: #f0f0f0;
+      transform: translateY(-2px);
+    }
+    .footer {
+      margin-top: 20px;
+      font-size: 0.9rem;
+      color: rgba(255,255,255,0.7);
+    }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>Netlify Auto Deploy</h1>
-    <p>Auto-deploys on every push to <strong>main</strong>.</p>
-    <div class="badge">Static demo</div>
+  <div class="container">
+    <h1>🚀 Netlify Auto Deploy</h1>
+    <p>This site updates automatically on every push to GitHub!</p>
+    <a href="https://www.netlify.com/" class="button" target="_blank">Learn Netlify</a>
+    <div class="footer">Updated: 2025-12-10</div>
   </div>
 </body>
 </html>
