using webhooks now

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
   <div class="container">
     <h1>🚀 Netlify Auto Deploy</h1>
-    <p>This site updates automatically on every push to GitHub!!!</p>
+    <p>This site updates automatically on every push to GitHub!!!!</p>
     <a href="https://www.netlify.com/" class="button" target="_blank">Learn Netlify</a>
     <div class="footer">Updated: 2025-12-10</div>
   </div>
